- Change password - update password on reset - refactor emailer

--- a/src/api/templates/password_reset.html
+++ b/src/api/templates/password_reset.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Grind account verification</title>
+        <title>Grind Password Reset</title>
         <meta name="description" content="Our first page">
         <meta name="keywords" content="html tutorial template">
     </head>
@@ -13,10 +13,10 @@
             </h1>
             
                 <div id="div-content" style="line-height: 26px;">
-                    <p style="text-align: center;">Thank you for registering an account with Grind!</p>
-                    <p style="text-align: center;">Please confirm your account by clicking the link below</p>
+                    <p style="text-align: center;">You requested for a password reset.</p>
+                    <p style="text-align: center;">If that's you click the link below to continue, otherwise ignore.</p>
                     <div style="margin-top: 7%;">
-                        <a id="confirm-link" href="{{link}}" style="background-color: rgb(52, 50, 194)2; color:#acce34;padding: 0.4em;font-size: 2em;text-decoration: none;margin-left: 19%;">Activate Account</a>
+                        <a id="confirm-link" href="{{link}}" style="background-color: rgb(52, 50, 194)2; color:#acce34;padding: 0.4em;font-size: 2em;text-decoration: none;margin-left: 19%;">Reset</a>
                     </div>
                     <br>
                     <p style="text-align: center;">Kindly note that the link expires in exactly 2 days as from {{time}}</p>
